[package]
name = "monoxide-client"
version = "0.1.0"
edition = "2021"

[lib]
name = "monoxide"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Monoxide crates
proc-macros = { workspace = true }
monoxide-protocol = { workspace = true }

# External dependencies
openxr-sys = { workspace = true }
bytemuck = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
once_cell = { workspace = true }