[package]
name = "monoxide-client"
version = "0.1.0"
edition = "2021"

[features]
default = ["XR_MND_headless", "XR_KHR_vulkan_enable2"]
XR_MND_headless = []
XR_KHR_vulkan_enable2 = []

[dependencies]
proc-macros = { workspace = true }
monoxide-protocol = { workspace = true }

openxr-sys = "0.9.3"
bytemuck = "1.13.1"
once_cell = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }