[package]
name = "monoxide-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macros = { workspace = true }

openxr-sys = { workspace = true }
once_cell = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
tokio = { workspace = true }
dirs = { workspace = true }