[package]
name = "monoxide"
version = "0.1.0"
edition = "2021"

[lib]
name = "monoxide"
crate-type = ["cdylib"]

[features]
default = ["XR_MND_headless", "XR_KHR_vulkan_enable2"]
XR_MND_headless = ["monoxide-client/XR_MND_headless", "monoxide-server/XR_MND_headless"]
XR_KHR_vulkan_enable2 = ["monoxide-client/XR_KHR_vulkan_enable2", "monoxide-server/XR_KHR_vulkan_enable2"]

[dependencies]
monoxide-client = { path = "../monoxide-client" }
monoxide-server = { path = "../monoxide-server"}